<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Selityspeli</string>
    <string name="action_info">Ohje</string>
    <string name="button_start">Aloita!</string>
    <string name="button_pass">Ohi</string>
    <string name="button_next">Seuraava</string>
    <string name="button_ok">OK</string>
    <string name="radio_words">Sanat</string>
    <string name="radio_people">Ihmiset</string>
    <string name="text_choose_topic">Valitse aihe</string>
    <string name="text_set_time">Aseta aika</string>
    <string name="text_explain">Selitä:</string>
    <string name="text_empty"></string>
    <string name="text_time_left">Aika:</string>
    <string name="text_info">Sananselitys: selitä sana sanomatta selitettävää sanaa, sanan runkoa tai yhdyssanojen tapauksessa mitään sanoista. Sanoja ei saa selittää kääntämällä niitä jollekin toiselle kielelle.\n\nVastaavasti ihmiset-kategoriassa ihmisen tai hahmon nimeä ei saa sanoa.\n\nPeliä voi vaikeuttaa rajoittamalla, että kuinka monella sanalla sanan tai hahmon saa selittää.</string>
    <string name="title_activity_play">Selitä!</string>
    <string name="title_activity_info">Ohje</string>

</resources>
