<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.selityspeli.PlayActivity" >

    <TextView
        android:id="@+id/text_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/bar_time_left"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:max="100"
        android:progress="100" />

    <TextView
        android:id="@+id/text_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/text_explain"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_explainable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/text_empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:onClick="ButtonPassOnClick"
            android:text="@string/button_pass" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:onClick="ButtonNextOnClick"
            android:text="@string/button_next" />

    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ButtonOkOnClick"
        android:text="@string/button_ok" />

</LinearLayout>
